web :: fixed issue with the layout spacing

--- a/web/src/styles/_content.scss
+++ b/web/src/styles/_content.scss
@@ -7,7 +7,7 @@
     position: relative;
     width: calc(100% - 120px);
     margin: 30px auto 24px;
-    max-width: 860px;
+    max-width: 950px;
     flex-shrink: 0;
 
     .note-header {
